--- a/configure.ac
+++ b/configure.ac
@@ -20,13 +20,7 @@ XORG_DEFAULT_OPTIONS
 XORG_CHECK_MALLOC_ZERO
 
 # Obtain compiler/linker options for depedencies
-PKG_CHECK_MODULES(XXF86DGA, xproto x11 xextproto xext [xf86dgaproto >= 2.0.99.2])
-
-# Check for _XEatDataWords function that may be patched into older Xlib release
-SAVE_LIBS="$LIBS"
-LIBS="$XXF86DGA_LIBS"
-AC_CHECK_FUNCS([_XEatDataWords])
-LIBS="$SAVE_LIBS"
+PKG_CHECK_MODULES(XXF86DGA, xproto [x11 >= 1.6] xextproto xext [xf86dgaproto >= 2.0.99.2])
 
 AC_CONFIG_FILES([Makefile
 		src/Makefile
